<resources>
    <string name="app_name">OpenPay Fit</string>

    // Tabs names
    <string name="title_profile">Profile</string>
    <string name="title_movies">Movies</string>
    <string name="title_location">Location\n</string>
    <string name="title_pictures">Pictures\n</string>

    // Profile
    <string name="actor_image_content_description">Actor image</string>
    <string name="actor_biography_is_empty">There is no information to show</string>

    // Empty state
    <string name="empty_state_image_content_description">Empty state image</string>
    <string name="empty_state_text">There is nothing to show in here..</string>
    <string name="exception_dialog_positive_text">OK</string>
    <string name="movie_starring">Movie starring:</string>
    <string name="most_popular_title">"Most Popular Movies: "</string>
    <string name="recommended_title">"Recommended Movies: "</string>
    <string name="top_rated_title">"Top Rated Movies: "</string>
    <string name="no_popular_movies_to_show">No popular movies to show</string>
    <string name="no_recommended_movies_to_show">No recommended movies to show</string>
    <string name="no_top_rated_movies_to_show">No top rated movies to show</string>
    <string name="gallery_button">Gallery</string>
    <string name="save_button">Save</string>
    <string name="clear_button">Clear</string>
    <string name="gallery_selection_title">Select image</string>
    <string name="successfully_saved_toast">Successfully saved!</string>
    <string name="counter_text">Select images</string>
</resources>
