<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin5">

        <LinearLayout
            android:id="@+id/empty_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/empty_state_image_height"
                android:contentDescription="@string/empty_state_image_content_description"
                android:scaleType="centerInside"
                android:scrollbars="horizontal"
                android:src="@drawable/empty_state_image" />

            <TextView
                android:id="@+id/empty_state_text"
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_state_text" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/actor_information_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/actor_image"
                    android:layout_width="@dimen/card_image_width"
                    android:layout_height="@dimen/card_image_height"
                    android:contentDescription="@string/actor_image_content_description"
                    android:src="@drawable/picture"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="@dimen/card_star_image_width"
                    android:layout_height="@dimen/card_star_image_height"
                    android:layout_margin="@dimen/margin10"
                    android:contentDescription="@string/actor_image_content_description"
                    android:src="@drawable/star"
                    app:layout_constraintStart_toEndOf="@id/actor_name"
                    app:layout_constraintTop_toTopOf="@id/actor_name" />

                <TextView
                    android:id="@+id/actor_biography"
                    style="@style/cardDepartment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/actor_image"
                    app:layout_constraintTop_toBottomOf="@id/actor_name"
                    tools:text="Actor biography" />

                <TextView
                    android:id="@+id/actor_name"
                    style="@style/cardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/actor_biography"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/actor_image"
                    app:layout_constraintTop_toBottomOf="@id/star"
                    tools:text="Actor Name" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/margin10"
            android:background="@color/purple_movie"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <TextView
            android:id="@+id/starring_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/cardTitle"
            android:text="@string/movie_starring"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/starring_label"
            tools:listitem="@layout/fragment_profile_card" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loader_animation"
            android:layout_width="@dimen/generic_loader_size"
            android:layout_height="@dimen/generic_loader_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loader" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
